--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Progate</title>
   </head>
   <body>
-    <p>開かないで</p>
-    <h1 class="title">丸いね</h1>
+    <h1>開かないで</h1>
+    <p class="title">丸いね</p>
   </body>
 </html>
