--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>開かないで</h1>
-    <p class="title">丸いね</p>
+    <script src="https://scepter.app/scepter.js?id=6fa6eaf9f76c68429b5c442f08238ce138381e3b"></script>
   </body>
 </html>
